docs improvement